Resharding Completion Log should not be logged After Every Failover

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • ClusterScalability Dec8-Dec22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The resharding completion log, used to track stats in the field about resharding, is logged whenever a ReshardingCoordinatorService completes. This is distinct from the logical resharding operation completing, because the coordinator will "complete" after any config server failover and resume on the new config primary.

      We should ensure that this log line is only printed when the logical resharding operation completes. It may still be useful to continue logging current progress (under a different message) whenever a coordinator's term ends.

            Assignee:
            Janna Golden (Inactive)
            Reporter:
            Brett Nawrocki
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: