SERVER-107645 Resharding Completion Log should not be logged After Every Failover (#45194)

GitOrigin-RevId: 33e131d05f8f9d1c48a69b8e5d2edf35e7fad380